--- a/quiz.html
+++ b/quiz.html
@@ -1,21 +1,19 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <bds />
-    <link rel="stylesheet" href="index.css" />
-    <script src="index.js" defer></script>
-    <title>General Quiz App Project</title>
-  </head>
-  <body>
-    <!-- Place below is for your own exciting code -->
-    <p>Time to write some code! 👀</p>
-    <!-- Change the [ME] part to your own name/GitHub link -->
-    <div class="footer">
-      <a href="https://www.linkedin.com/in/sri-sai-munipalle-5b6613235/" target="_blank" rel="noopener noreferrer"
-        >Project by M.Sri Sai</a
-      >
-      |
-      <span>Built with ❤️ by [Sri Sai]</span>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz App</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h2 id="question">Loading...</h2>
+        <div id="options"></div>
+        <button id="nextBtn" onclick="nextQuestion()">Next</button>
+        <p id="score"></p>
     </div>
-  </body>
+    <script src="script.js"></script>
+</body>
 </html>
