--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="quiz.css">
 </head>
 <body>
     <div class="container">
@@ -14,6 +14,6 @@
         <button id="nextBtn" onclick="nextQuestion()">Next</button>
         <p id="score"></p>
     </div>
-    <script src="script.js"></script>
+    <script src="quiz.js"></script>
 </body>
 </html>
